kubernetes/infrastructure/metabase/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metabase
  labels:
    app.kubernetes.io/name: metabase
